<resources>
    <string name="app_name">TreasureHunter</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_remember_password">Don\'t Remember Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_instagram">Sign in with Instagram</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_again">Re-enter Password</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="post_tag">#bag</string>
    <string name="post_like">60</string>
    <string name="search">Search here…</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="submit">Submit</string>
    <string name="choose">Choose from album</string>
    <string name="cut">Confirm</string>
    <string name="img1">Reset</string>
    <string name="btn_continue">Continue</string>
    <string name="post">Post</string>
    <string name="share">Share</string>
    <string name="delete">DELETE</string>
    <string name="selection">User\'s Selection</string>
    <string name="choice">Your Choice</string>
    <string name="options">Shopping Options</string>
    <string name="no_result">No shopping results being found.</string>
    <string name="select">Select</string>
    <string name="load">Load More</string>
    <string name="delete_hint">Swipe LEFT to delete the post</string>
    <string name="Home">Home</string>
    <string name="Photo">Photo</string>
    <string name="Profile">Profile</string>
</resources>
