<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <android.support.constraint.Guideline
        android:id="@+id/sign_up_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <android.support.constraint.Guideline
        android:id="@+id/sign_up_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        android:textColor="@color/login_form_details"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/sign_up_guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_create_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:singleLine="true"
        android:hint="@string/username"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="@id/sign_up_guideline_right"
        app:layout_constraintStart_toStartOf="@id/sign_up_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/txt_sign_up" />

    <EditText
        android:id="@+id/edt_create_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="@id/sign_up_guideline_right"
        app:layout_constraintStart_toStartOf="@id/sign_up_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/edt_create_username" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleTint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="@id/sign_up_guideline_right"
        app:layout_constraintStart_toStartOf="@id/sign_up_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/edt_create_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createPasswordAgainLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleTint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="@id/sign_up_guideline_right"
        app:layout_constraintStart_toStartOf="@id/sign_up_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/createPasswordLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_create_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/login_form_details_medium"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/sign_up_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/createPasswordAgainLayout" />

    <TextView
        android:id="@+id/sign_up_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textColor="@color/white"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>