<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_profile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:background="@color/transparent"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/txt_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_padding_space"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <ImageButton
            android:id="@+id/btn_profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_done_white_24dp"
            android:background="@color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/login_form_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_space"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_profile_photo"
            android:layout_gravity="center_horizontal"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <ImageButton
            android:id="@+id/btn_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/general_space"
            android:src="@drawable/ic_edit_black_24dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/btn_padding_space">

        <EditText
            android:id="@+id/edt_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_space"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/general_space" />

        <EditText
            android:id="@+id/edt_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_space"
            android:hint="@string/email_address"
            android:textColor="@color/white"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/general_space" />

        <EditText
            android:id="@+id/edt_profile_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_space"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="@dimen/general_space" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_logout"
            android:text="@string/logout"
            style="@style/BottomButton"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/btn_bottom"/>
    </RelativeLayout>


</LinearLayout>