<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <android.support.constraint.Guideline
        android:id="@+id/login_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <android.support.constraint.Guideline
        android:id="@+id/login_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/img_login_icon"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="logo"
        android:src="@drawable/icon_title"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:inputType="textEmailAddress"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="@id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/img_login_icon" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edtPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
        app:passwordToggleTint="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="@id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/edt_login_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/login_form_details_medium"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordLayout" />

    <!--<TextView-->
        <!--android:id="@+id/login_forgot_password"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/don_t_remember_password"-->
        <!--android:textColor="@color/login_form_details"-->
        <!--android:onClick="onClick"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"-->
        <!--app:layout_constraintStart_toStartOf="@+id/login_guideline_left"-->
        <!--app:layout_constraintTop_toBottomOf="@id/btn_login"-->
        <!--android:layout_marginTop="16dp"/>-->

    <View
        android:id="@+id/login_line_left"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintStart_toStartOf="@id/login_guideline_left"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_instagram_login"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/login_or"/>

    <TextView
        android:id="@+id/login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_line_left"
        app:layout_constraintTop_toTopOf="@+id/login_line_left"
        app:layout_constraintEnd_toStartOf="@+id/login_line_right"
        app:layout_constraintStart_toEndOf="@+id/login_line_left" />

    <View
        android:id="@+id/login_line_right"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/login_or"
        app:layout_constraintEnd_toEndOf="@id/login_guideline_right"
        app:layout_constraintStart_toEndOf="@+id/login_or"
        app:layout_constraintTop_toTopOf="@+id/login_or"/>

    <!--<TextView-->
        <!--android:id="@+id/login_instagram_login"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:drawablePadding="8dp"-->
        <!--android:drawableStart="@drawable/ic_instagram"-->
        <!--android:text="@string/sign_in_with_instagram"-->
        <!--android:textColor="@color/login_form_details"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="18sp"-->
        <!--android:onClick="onClick"-->
        <!--app:layout_constraintBottom_toTopOf="@id/login_google_login"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"-->
        <!--app:layout_constraintStart_toStartOf="@+id/login_guideline_left" />-->

    <Button
        android:id="@+id/btn_instagram_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_instagram_login"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_instagram"
        android:drawablePadding="8dp"
        android:onClick="onClick"
        android:padding="@dimen/btn_padding_space"
        android:text="@string/sign_in_with_instagram"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_google_login"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left" />

    <com.google.android.gms.common.SignInButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_google_login"
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/login_form_details_medium"
        android:textSize="18sp"
        android:textStyle="bold"
        app:buttonSize="wide"
        app:layout_constraintBottom_toTopOf="@id/login_no_account"
        app:layout_constraintEnd_toStartOf="@id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@id/login_guideline_left" />

    <TextView
        android:id="@+id/login_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/white"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>